cmake_minimum_required(VERSION 3.9)
project(cygtrace-examples)
add_subdirectory(demo_cpp)
add_subdirectory(export_json)

find_package(pybind11 QUIET)
IF (${pybind11_FOUND})
add_subdirectory(demo_pybind11)
ELSE (${pybind11_FOUND})
MESSAGE(STATUS "pybind11 not found, skipping.")
ENDIF (${pybind11_FOUND})

find_package(Python3 QUIET)
IF (${Python3_FOUND})
add_subdirectory(demo_cpython)
ELSE (${Python3_FOUND})
MESSAGE(STATUS "Python3 not found, skipping.")
ENDIF (${Python3_FOUND})
